1. Added some full stops to the copy in the features sections 2. Made some changes to some em properties in the features styles section, as well as adding letter spacing to the titles and copy

--- a/css/style.css
+++ b/css/style.css
@@ -124,14 +124,14 @@ h1 {
   background-color: var(--light-grayish-blue);
 }
 .features__wrapper {
-  max-width: 1100px;
+  max-width: 1050px;
   margin: auto;
   padding-top: 5.2em;
 }
 
 .features__reviews-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 1em;
   margin-top: 3.5em;
   padding-bottom: 5em;
@@ -140,13 +140,15 @@ h1 {
 .features__copy h2 {
   color: var(--dark-blue);
   font-weight: 300;
+  font-size: 1.75em;
 }
 
 .features__copy p {
   font-size: 0.8em;
-  width: 55%;
+  width: 100%;
   padding-top: 1.5em;
   color: var(--grayish-blue);
+  letter-spacing: -0.1px;
 }
 
 .features__review-title {
@@ -154,20 +156,22 @@ h1 {
   font-weight: 300;
   padding-top: 1em;
   padding-bottom: 1em;
+  letter-spacing: -1px;
 }
 
 .features__review-copy {
-  font-size: 0.75em;
+  font-size: 0.71em;
   color: var(--grayish-blue);
+  letter-spacing: -0.1px;
 }
 
 .features__review:nth-child(1) p {
-  padding-right: 0.8em;
+  padding-right: 1.2em;
 }
 
 .features__review:nth-child(2) p,
 .features__review:nth-child(3) p {
-  padding-right: 1em;
+  padding-right: 1.2em;
 }
 
 /* Articles styles */
